kuma/k8s/kong/ingress-kuma.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-gui-ingress
  namespace: kuma-system
  annotations:
    konghq.com/strip-path: "false"
    konghq.com/protocols: http
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /gui
        pathType: Prefix
        backend:
          service:
            name: kuma-control-plane
            port:
              number: 5681
