kuma/k8s/kong/ingress-register.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-register-only
  namespace: ecommerce
  annotations:
    konghq.com/methods: POST
    konghq.com/strip-path: 'false'
    konghq.com/protocols: http
    konghq.com/https-redirect-status-code: "301"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8001
